@@ -288,15 +288,24 @@ ReplSetServers.prototype.connect = function(parent, options, callback) {
 }
 
 ReplSetServers.prototype.checkoutWriter = function() {
-  return this.primary.connection;
+  // console.log("================================================================ checkoutWriter")
+  // console.dir(this._state.master.checkoutWriter())  
+  // console.dir(this._state.master.connection)
+  return this._state.master.checkoutWriter();
 }
 
 ReplSetServers.prototype.checkoutReader = function() {
+  // console.log("================================================================ checkoutReader")
   // If we have specified to read from a secondary server grab a random one and read
   // from it, otherwise just pass the primary connection
-  if(this.readSecondary && this.secondaries.length > 0) {
-    var server = this.secondaries[Math.floor(Math.random() * this.secondaries.length)];
-    return server.connection;
+  if(this.readSecondary && Object.keys(this._state.secondaries).length > 0) {
+    // Pick a random key
+    var keys = Object.keys(this._state.secondaries);
+    var key = keys[Math.floor(Math.random() * keys.length)];
+    // console.dir(this._state.secondaries[key])
+    return this._state.secondaries[key].checkoutReader();
+    // var server = this._state.secondaries[Math.floor(Math.random() * this.secondaries.length)];
+    // return server.connection;
   } else {
     return this.checkoutWriter();
   }
